<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_contact"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="15dp"
        android:paddingLeft="20dp">

        <!--
        <ImageView
            android:layout_width="74dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/gridwatchlogo"
            android:id="@+id/imageView" />
            -->

        <TextView
            android:text="@string/contact_str"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:paddingLeft="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="15dp"
            android:background="@color/colorPrimary"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:text="Your Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:paddingLeft="40dp"
        android:paddingTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText3"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <TextView
        android:text="Your Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="18sp"
        android:paddingLeft="40dp"
        android:paddingTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText4"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <TextView
        android:text="Your Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="18sp"
        android:paddingLeft="40dp"
        android:paddingTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/feedbackbox"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_weight="5.63"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="5dp"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:lines="5"
        android:minLines="1"
        android:gravity="top|left"
        android:maxLines="10"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="Send Your Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

</LinearLayout>
