<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_tokens"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal">


    <TextView
        android:text="Your Current Token Amount:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:textColor="@color/colorGrey" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
        android:text="KSh "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:text="XXX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/buyTokenBalanceTextView" />


    </LinearLayout>

    <TextView
        android:text="Please enter the amount you want to purchase:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorGrey" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical">

        <TextView
            android:text="KSh    "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_weight="0.17"
            android:gravity="right"
            android:textColor="@color/colorGrey" />

        <EditText
            android:layout_width="30dp"
            android:textColor="@color/cardview_dark_background"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/buyTokenPurchaseEditText"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background_normal"/>

    </LinearLayout>

    <TextView
        android:text="Enter your M-PESA PIN:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorGrey" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/buyTokenPinEditText"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginBottom="20dp" />

    <Button
        android:text="Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buyTokenConfirmButton"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/cardview_light_background"
        android:background="@color/colorPrimary"/>


</LinearLayout>
