...

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/loginPrePayEditText"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background_normal" />

            <RadioButton
                android:text="Post-Pay"
                android:layout_width="wrap_content"
...
