...
    <string name="title_activity_twitter_timeline">Whatever</string>
    <string name="title_activity_postpaid_detail">Bill</string>
    <string name="time_error">时间有问题</string>
    <string name="twitter">Twitter</string>

    <string name="failure_dialog">Characters Did Not Match! Report Not Sent!</string>
    <string name="report_dialog">To report a power outage, type the following characters and press report.</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>

    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="logout">Logout</string>
...
