...
    </LinearLayout>

    <Button
        android:text="Report an Outage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/outage_btn"
        android:background="@color/colorYellow"
        android:layout_below="@+id/balance_payment_layout"
        android:layout_weight="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
...
